# coco-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/design/: architecture.md  reranker-design.md
src/coco_rag/: __init__.py  banner.py  config.py  db.py  flow.py  interactive_search.py  main.py  mcp_server.py  settings.py  vector_search.py
src/coco_rag/rerankers/: __init__.py  pure_functional.py  spacy_nlp.py  technical_terms.py  unified.py
tests/: test_config.py  test_reranking.py  test_spacy_reranker.py
